# sst-examples

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
offshore_seismic_edit/: segy_editing.ipynb
offshore_seismic_edit/.ipynb_checkpoints/: segy_editing-checkpoint.ipynb
offshore_seismic_edit/resources/: bathy_clip_bergen0111a.asc  bathy_clip_bergen0111a.nc  bathy_clip_bergen0111a.nc.aux.xml  bathy_clip_bergen0111a_interpolator.pkl
predict_sand_thickness/: predict_sand_thickness.ipynb  predict_sand_thickness_advanced.ipynb  predict_sand_thickness_simple.ipynb  predict_sand_thickness_upgrade.ipynb
predict_sand_thickness/.ipynb_checkpoints/: predict_sand_thickness_simple-checkpoint.ipynb
predict_sand_thickness/resources/: study_area.dbf  study_area.shp  study_area.shx
